--- a/qemu_v8/spmc_el1_manifest.dts
+++ b/qemu_v8/spmc_el1_manifest.dts
@@ -18,8 +18,8 @@
 		maj_ver = <0x1>;
 		min_ver = <0x1>;
 		exec_state = <0x0>;
-		load_address = <0x0 0xe100000>;
-		entrypoint = <0x0 0xe100000>;
+		load_address = <0x0 0x48100000>;
+		entrypoint = <0x0 0x48100000>;
 		binary_size = <0x80000>;
 	};
 
@@ -49,8 +49,8 @@
 	};
 
 	/* VIRT_SECURE_MEM */
-	memory@e000000 {
+	memory@40000000 {
 		device_type = "memory";
-		reg = <0x0 0xe000000 0x1000000>;
+		reg = <0x0 0x40000000 0x8000000>;
 	};
 };
