--- a/qemu_v8/tb_fw_config.dts
+++ b/qemu_v8/tb_fw_config.dts
@@ -12,7 +12,7 @@
 		compatible = "arm,sp";
 		op-tee {
 		       uuid = "486178e0-e7f8-11e3-bc5e-0002a5d5c51b";
-		       load-address = <0xe300000>;
+		       load-address = <0x48300000>;
 		};
 	};
 };
